# unicode-segmentation

./: .gitignore  Cargo.toml  build.sh  readme.md
src/: lib.rs
